--- a/HTML/CSS/Bootstrap/Flex1.html
+++ b/HTML/CSS/Bootstrap/Flex1.html
@@ -28,7 +28,7 @@
             color: #6c757d;
         }
         .rsvp {
-            color:black
+            color:black;
             font-weight: bold;
         }
         .button-container {
