--- a/JavaScript/Task.html
+++ b/JavaScript/Task.html
@@ -24,7 +24,7 @@
                         <input type="date" class="form-control" id="date" required>
                     </div>
                     <div class="mb-3">
-                        <label for="description" class="form-label">Description</label>
+                        <label for="description" class="form-label">From-to-Where</label>
                         <textarea class="form-control" id="description" rows="3" required></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Add Record</button>
